1.16.5-1.3.4
    - All added key bindings are now unbound by default.
    - Extra inventory buttons are now disabled by default.
1.16.5-1.2.1
    - Fixed CrustTomlWriter calling StringUtils#stripColor, crashing servers.
1.16.5-1.1.1
    - Magnet mode is now disabled by default.
1.16.5-1.1.0
    Feature changes:
    - Added the Weight and Vulnerability effects from Special Mobs.
    - Added "apocalypse_difficulty_or_time" environment.
    API/tool changes:
    - Fixed environment entry builder not working.
    - Added pooled call options for environment-sensitive weighted lists.
    - Removed set block flags and nbt constants (Forge provides these).
1.16.5-1.0.0
    - Initial release.